[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "time"] }
tracing-appender = "0.2"


[dependencies.uuid]
version = "1.23.3"
features = ["v4", "serde"]

[dev-dependencies]
tempfile = "3"
